# Omnia-SDK

./: .gitmodules  CMakeLists.txt  NOTICE  README.md
apps/base_example/: main.c
apps/emg_plot/core/: app_emg.c  app_emg_stream.c  app_plot.c
apps/emg_plot/include/: app_emg.h  app_emg_stream.h  app_plot.h
apps/solar_demo/: CMakeLists.txt  main.c
backends/tflm/core/: omnia_ai_tflm_backend.cc
backends/tflm/include/: omnia_ai_tflm_backend.h
cmake/toolchains/: esp32.cmake  stm32h7.cmake
core/: CMakeLists.txt  omnia_ai.c  omnia_port.c  omnia_port_default.c  omnia_port_ex.c
docs/: port_README.md  port_contract.md
drivers/hm19/core/: hm19.c
drivers/hm19/include/: hm19.h
drivers/sen0240/core/: sen0240.c
drivers/sen0240/include/: sen0240.h
drivers/st7735/core/: fonts.c  st7735.c
drivers/st7735/include/: fonts.h  st7735.h
include/: omnia_adc.h  omnia_ai.h  omnia_ai_internal.h  omnia_port.h  omnia_port_ex.h  omnia_rtos.h  omnia_types.h  omnia_uart.h
include/edge/hal/: gpio.h  i2c.h  time.h
include/edge/ml/: tflm_api.h
ports/common/: rtos_freertos.c
ports/esp32/: hal_esp32.c  port_esp32.c
ports/msp430/: port_msp430.c
ports/stm32h7/: hal_stm32h7.c  port_stm32.c  port_stm32_freertos.c
ports/stm32h7/inc/: port_stm32.h
ports/stm32h7/src/: port_stm32.c
protocols/emg_packet/core/: emg_packet.c
protocols/emg_packet/include/: emg_packet.h
src/hal/: hal_common.c
src/ml/: tflm_api.c
streams/adc_stream/core/: adc_stream.c
streams/adc_stream/include/: adc_stream.h
streams/emg_stream/core/: emg_stream.c
streams/emg_stream/include/: emg_stream.h
